--- a/dummy.html
+++ b/dummy.html
@@ -14,7 +14,7 @@
     <body>
         <h1>Dummy</h1>
         <p>This is a dummy page that helps us demonstrate reusable CSS
-            stylesheets. <a href='hello-css.html' style='color: #7caade; text-decoration: none;'>Go back</a>.</p>
+            stylesheets. <a href='index.html' style='color: #7caade; text-decoration: none;'>Go back</a>.</p>
 
             <p>Want to try crossing out an <a href='nowhere.html'
                 style='color: #7caade; text-decoration: none;'>obsolete link</a>?
